--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://168.138.24.93:5000';
+        const API_BASE_URL = 'https://covers-municipal-returns-optimal.trycloudflare.com';
 
         // Function to send commands to the backend
         async function sendCommand(command) {
